fix navbar button not showing

--- a/global/nav/navbar.css
+++ b/global/nav/navbar.css
@@ -24,6 +24,7 @@ brand-nav{
     margin:3px;
     font-weight: 800;
     color:var(--navbar-shrink-color);
+    z-index: 1000;
 }
 
 .username-link{
